--- a/localisation/english/diplomacy_l_english.yml
+++ b/localisation/english/diplomacy_l_english.yml
@@ -570,24 +570,24 @@
  puppet_active:0 "is master of"
  fleets_on_our_borders:0 "Fleets on our borders:"
  long_term_trade_partner:0 "Trade partners"
- sov_ger_treaty:0 "Soviet-German Treaty"
- sov_ger_treaty_trade:0 "Soviet-German Treaty"
- SOV_FRA_join_comintern_reject:0 "Rejected France joining Comintern"
- SOV_ultimatum_to_greece_thrace:0 "Forced Greece to give Thrace"
+ sov_ger_treaty:0 "Pravda-Kuro Treaty"
+ sov_ger_treaty_trade:0 "Kuro-Pravda Treaty"
+ SOV_FRA_join_comintern_reject:0 "Rejected BC Freedom joining Comintern"
+ SOV_ultimatum_to_greece_thrace:0 "Forced Hoplite to give Thrace"
  ger_sov_alliance_focus:0 "Kuro-Pravda Alliance Focus"
- ger_jap_diplomacy_focus:0 "German-Japanese Diplomacy Focus"
+ ger_jap_diplomacy_focus:0 "Kuro-Chi Ha Tan Diplomacy Focus"
  withdrew_advisors:0 "Withdrew Advisors"
- ger_chi_diplomacy_focus:0 "German-Chinese Diplomacy Focus"
- supported_the_chinese:0 "Supported the Chinese"
- ger_tur_diplomacy_focus:0 "German-Turkish Diplomacy Focus"
- ger_cze_diplomatic_focus:0 "German-Czechoslovakian Diplomacy Focus"
- ger_ita_alliance_focus:0 "German-Italian Alliance Focus"
- ger_spa_alliance_focus:0 "German-Spanish Alliance Focus"
- ger_pol_diplomacy_focus:0 "German-Polish Diplomacy Focus"
- ger_naval_intimidation_focus:0 "German Naval Intimidation Focus"
+ ger_chi_diplomacy_focus:0 "Kuro-Zhongguo Diplomacy Focus"
+ supported_the_chinese:0 "Supported the Zhongguo"
+ ger_tur_diplomacy_focus:0 "Kuro-Kebab Diplomacy Focus"
+ ger_cze_diplomatic_focus:0 "Kuro-Gregor Diplomacy Focus"
+ ger_ita_alliance_focus:0 "Kuro-Anzio Alliance Focus"
+ ger_spa_alliance_focus:0 "Kuro-Blue Divison Alliance Focus"
+ ger_pol_diplomacy_focus:0 "Kuro-Bonple Diplomacy Focus"
+ ger_naval_intimidation_focus:0 "Kuro Naval Intimidation Focus"
  GER_anschluss_rejected:0 "Ooarai refused Anschluss"
- GER_demand_sudetenland_rejected:0 "Czechoslovakia refused Sudetenland"
- GER_FRA_join_germany_reject:0 "Rejected France joining Axis"
+ GER_demand_sudetenland_rejected:0 "Gregor refused Sudetenland"
+ GER_FRA_join_germany_reject:0 "Rejected Maginot joining Axis"
  GER_demand_slovenia_YUG:0 "Demanded Slovenia"
  GER_first_vienna_award_GER:0 "First Vienna Award"
  GER_first_vienna_award_other:0 "First Vienna Award"
@@ -606,12 +606,12 @@
  GER_treaty_of_craiova_GER:0 "Treaty Of Craiova"
  GER_treaty_of_craiova_noland:0 "Treaty Of Craiova"
  GER_treaty_of_craiova_other:0 "Treaty Of Craiova"
- ROM_seek_alliance_GER:0 "Seeking Revenge Against Soviet"
- ROM_seek_alliance_SOV:0 "Seeking Revenge Against Germany"
- befriended_the_dutch:0 "Befriended the Dutch"
- claimed_western_yugoslavia:0 "Claimed Western Yugoslavia"
+ ROM_seek_alliance_GER:0 "Seeking Revenge Against Pravda"
+ ROM_seek_alliance_SOV:0 "Seeking Revenge Against Kuromormine"
+ befriended_the_dutch:0 "Befriended the Batavian"
+ claimed_western_yugoslavia:0 "Claimed Western Brazava"
  ita_supported_spain_civil_war:0 "Volunteers in Civil War"
- ita_diplomacy_focus:0 "Italian Diplomacy Focus"
+ ita_diplomacy_focus:0 "Anzian Diplomacy Focus"
  ITA_FRA_woo_italy_reject:0 "Rejected French faction"
  pact_of_steel_opinion:0 "Pact of Steel"
  anti_fascist_diplomacy_focus:0 "Anti-Fascist Diplomacy Focus"
@@ -625,7 +625,7 @@
  threat_to_baltic:0 "Claims in Baltic"
  claimed_bessarabia:0 "Claimed Bessarabia"
  claimed_bucovina:0 "Claimed Bucovina"
- claimed_eastern_poland:0 "Claimed Eastern Poland"
+ claimed_eastern_poland:0 "Claimed Eastern Bonple"
  war_plan_black:0 "War Plan Black"
  war_plan_red:0 "War Plan Red"
  war_plan_white:0 "War Plan White"
@@ -740,8 +740,8 @@
  minor_sanctions:0 "Minor trade sanctions"
  sanctions_relations:0 "Trade sanctions"
  minor_sanctions_relations:0 "Minor trade sanctions"
- burma_road_good:0 "The Burma road"
- burma_road_bad:0 "The Burma road"
+ burma_road_good:0 "The Tategoto road"
+ burma_road_bad:0 "The Tategoto road"
  unholy_alliance_opinion:0 "Unholy Alliance"
  unholy_alliance_trade:0 "Unholy Alliance"
  ENG_guiding_the_colonies:0 "Guiding the Colonies"
@@ -1087,7 +1087,7 @@
  CAN_supply_the_red_army_trade:0 "Supply the Red Army"
  CAN_patriation_mod:0 "Demanded Patriation"
  SAF_anti_colonialist_crusaders:0 "Anti-Colonialist Crusaders"
- SAF_anti_british_sentiment:0 "Anti-British Sentiment"
+ SAF_anti_british_sentiment:0 "Anti-Gloriana Sentiment"
  NZL_strengthen_ties:0 "Strengthened Ties"
  DIPLOMACY_REDUCEAUTONOMY_TITLE:0 "Reduce subject autonomy"
  DIPLOMACY_REDUCEAUTONOMY_ACTION_DESC:0 "Reduce the subject's level of autonomy"
@@ -1111,7 +1111,7 @@
  HUN_refused_alliance:0 "Refused Alliance"
  HUN_renegade:0 "Renegade Actions"
  HUN_SOV_betrayal:0 "Soviet Betrayal"
- HUN_split_CZE:0 "Agreement on the Czech Issue"
+ HUN_split_CZE:0 "Agreement on the Gregor Issue"
  HUN_split_CZE_betrayed:0 "Broke Agreement"
  refused_alliance:0 "Refused Alliance"
  YUG_sold_planes:0 "Approved purchase of planes"
@@ -1181,8 +1181,8 @@
  HOL_caved_to_the_british_ger:0 "Caved to the British"
  HOL_caved_to_the_british_eng:0 "Caved to the British"
  HOL_essential_dutch_trade:0 "Essential Dutch Trade"
- HOL_caved_to_the_germans_ger_trade:0 "Caved to the Germans"
- HOL_caved_to_the_british_ger_trade:0 "Caved to the British"
+ HOL_caved_to_the_germans_ger_trade:0 "Caved to Kuromormine"
+ HOL_caved_to_the_british_ger_trade:0 "Caved to St Gloriana"
  ENG_imperial_conference_approved_resolution:0 "Approved Imperial Conference Resolution"
  ENG_non_interference_treaty:0 "Non-Interference Treaty"
  default_scripted_diplo_action_request_desc:0 "$REQUESTER|H$ requested $ACTION|H$ diplomatic action."
@@ -1267,23 +1267,23 @@
  TUR_likeminded_ultranationalists:0 "Likeminded Ultranationalists"
  TUR_righteous_traditionalists:0 "Righteous Traditionalists"
  TUR_assertive_regional_defender:0 "Assertive Regional Defender"
- TUR_turkish_meddlers:0 "Turkish Meddlers"
+ TUR_turkish_meddlers:0 "Kebab Meddlers"
  TUR_unreliable_debt_ditchers:0 "Unreliable Debt Ditchers"
  TUR_traitors_of_the_revolution:0 "Traitors of the Revolution"
  TUR_released_hatay_to_us:0 "Released Hatay to Us"
- TUR_oppressors_of_turks:0 "Oppressors of Turks"
+ TUR_oppressors_of_turks:0 "Oppressors of Kebab"
  TUR_pact_of_power:0 "Pact of Power"
  TUR_insulted_our_honour:0 "Insulted Our Honor"
  TUR_joint_resource_extraction:0 "Joint Resource Extraction Efforts"
  BUL_condemned_imro:0 "Condemned IMRO"
  BUL_supported_imro:0 "Supported IMRO"
  BUL_supplied_imro:1 "Sent Weapons to IMRO"
- BUL_approached_germany:0 "Approached Germany"
- BUL_approached_italy:0 "Approached Italy"
- BUL_approached_the_uk:0 "Approached the United Kingdom"
- BUL_approached_the_ussr:0 "Approached the Soviet Union"
- BUL_approached_yugoslavia:0 "Approached Yugoslavia"
- BUL_approached_greece:0 "Approached Greece"
+ BUL_approached_germany:0 "Approached Kuro"
+ BUL_approached_italy:0 "Approached Anzio"
+ BUL_approached_the_uk:0 "Approached St Gloriana"
+ BUL_approached_the_ussr:0 "Approached Pravda"
+ BUL_approached_yugoslavia:0 "Approached Brazava"
+ BUL_approached_greece:0 "Approached Hoplite"
  BUL_strengthened_relations_with_us:0 "Strengthened Relations with us"
  BUL_bulgarian_claims_recognized:0 "Recognized our Claims"
  BUL_bulgarian_claims_not_recognized:0 "Did not Recognize our Claims"
@@ -1291,7 +1291,7 @@
  BUL_rejected_our_donation:0 "Rejected our Donation"
  BUL_complied_with_our_demands:0 "Complied with our Demands"
  BUL_rejected_our_demands:0 "Rejected our Demands"
- BUL_honored_bulgarian_claims:0 "Honored Bulgarian Claims"
+ BUL_honored_bulgarian_claims:0 "Honored Yogurt's Claims"
  BUL_lifted_arms_restrictions:0 "Lifted our Arms Restrictions"
  BUL_refused_to_lift_arms_restrictions:0 "Refused to lift arms restrictions"
  BUL_granted_uranium_mining_rights:0 "Granted Uranium Mining Rights"
@@ -1313,7 +1313,7 @@
  BUL_territorial_arbitration_negative:0 "Territorial Arbitration"
  BUL_ferdinand_is_back:0 "Ferdinand I is Back"
  BUL_old_enemies:0 "Old Enemies"
- BUL_built_ships:0 "Bulgarian Ships Built"
+ BUL_built_ships:0 "Yogurts Ships Built"
  BUL_kicked_us_from_faction:0 "Kicked us from their Faction"
  BFTB_incongruous_neighbors:0 "Incongruous Neighbors"
  BFTB_balkan_pact_ally:0 "The Balkan Pact"
@@ -1326,14 +1326,14 @@
  DIPLOMACY_JOINED_WAR_EXTRA_CALLED_MULTIPLE:0 "\n$LIST$ also join the war along with them."
  SOV_pressured_our_government:0 "Pressured our government"
  SOV_stirring_the_masses:0 "Stirring the masses"
- SOV_supported_china_good:0 "Supported China in the conflict"
- SOV_supported_china_bad:0 "Supported China in the conflict"
- SOV_supported_japan_good:0 "Supported Japan in the conflict"
- SOV_supported_japan_bad:0 "Supported Japan in the conflict"
- SOV_cooperating_with_us:0 "Cooperating with us against other Chinese Warlords"
- SOV_cooperating_with_other:0 "Cooperating with other Chinese Warlords against us"
+ SOV_supported_china_good:0 "Supported Zhongguo in the conflict"
+ SOV_supported_china_bad:0 "Supported Zhongguo in the conflict"
+ SOV_supported_japan_good:0 "Supported Chi Ha Tan in the conflict"
+ SOV_supported_japan_bad:0 "Supported Chi Ha Tan in the conflict"
+ SOV_cooperating_with_us:0 "Cooperating with us against other Zhongguo Warlords"
+ SOV_cooperating_with_other:0 "Cooperating with other Zhongguo Warlords against us"
  SOV_sent_us_weapons:0 "Sent us weapons"
- SOV_soviet_japanese_pact_against_usa:0 "Soviet-Japanese Anti-USA Pact"
+ SOV_soviet_japanese_pact_against_usa:0 "Pravda-Chi Ha Tan Anti-Saunders Pact"
  SOV_refused_to_follow_our_guidelines:0 "Refused to follow our guidelines"
  SOV_anti_fascist_policies_good:0 "Anti-Fascist Policies"
  SOV_anti_fascist_policies_bad:0 "Anti-Fascist Policies"
@@ -1352,7 +1352,7 @@
  SOV_international_socialist_association_bad:0 "$SOV_international_socialist_association$"
  SOV_support_for_exiles:0 "Support for the exiles"
  SOV_fourth_international_good:0 "Supports the Fourth International"
- SOV_fourth_international_bad:0 "Follower of the Stalinist Doctrine"
+ SOV_fourth_international_bad:0 "Follower of the Katyusha Doctrine"
  HAS_EMBARGO:0 "We already embargo them"
  DIPLOMACY_PUPPET_NO:0 "We are a puppet"
  DIPLOMACY_OUR_PUPPET_NO:0 "They are our subject"
@@ -1406,9 +1406,9 @@
  SWI_considerable_appeasement:1 "Considerable Appeasement"
  SWI_extensive_appeasement:0 "Extensive Appeasement"
  SWI_fortified_border:1 "Fortified their border with us"
- SWI_banned_countrys_ideology:1 "The Swiss Confederation banned propaganda from our government's ideology"
+ SWI_banned_countrys_ideology:1 "The Neutrality Confederation banned propaganda from our government's ideology"
  SWI_romansh_language_adopted:0 "Adopted Romansh as an official language"
- SWI_banned_national_front:0 "Banned The Swiss National Front"
+ SWI_banned_national_front:0 "Banned The Neutrality National Front"
  SWI_bought_equipment_from_the_enemy:0 "Bought equipment from the enemy"
  SWI_bought_equipment_from_us:0 "Bought equipment from us"
  SWI_banned_communism_good:0 "Banned Communism"
@@ -1461,8 +1461,8 @@
  #DANNES
  ITA_military_cooperation_acceptance:0 "Military Cooperation"
  ITA_military_cooperation_rejection:0 "Rejected Military Cooperation"
- ITA_recognized_the_empire:0 "Recognized the Italian Empire"
- ITA_dismissed_the_empire:0 "Dismissed the Italian Empire"
+ ITA_recognized_the_empire:0 "Recognized the Anzian Empire"
+ ITA_dismissed_the_empire:0 "Dismissed the Anzian Empire"
 
 
  DIPLOMACY_CONDITIONAL_SURRENDER_POINT_FRACTION:0 "They will receive $VALUE|%H$ of the maximum available conference points."
