--- a/localisation/english/dod_events_l_english.yml
+++ b/localisation/english/dod_events_l_english.yml
@@ -285,16 +285,16 @@
  DOD_hungary.95.a:0 "Shame."
  DOD_hungary.95.b:0 "Then we will go at it alone!"
  DOD_hungary.96.t:0 "Ultimatum from Budapest"
- DOD_hungary.96.desc_HUN_GER:0 "Instead of defusing the situation, our strong response to the latest Hungarian demands concerning the Vojvodina have apparently led to a pact between Hungary and Germany. In a recent speech, [GER.GetLeader] called Slovenia "one of the old, unredeemed provinces of the Reich" that should be reclaimed as soon as possible. The Hungarian and the German ambassador have both handed over a note to the effect that the Vojvodina and Slovenia are to be transfered to their control at once."
- DOD_hungary.96.desc_HUN_ITA:0 "Instead of defusing the situation, our strong response to the latest Hungarian demands concerning the Vojvodina have apparently led to a pact between Hungary and Italy. In a recent speech, [ITA.GetLeader] referred to Dalmatia as "the unredeemed far shore of the Adriatic". The Hungarian and the Italian ambassador have both handed over a note to the effect that the Vojvodina and Dalmatia are to be transfered to their control at once."
- DOD_hungary.96.desc_HUN_both:0 "Our refusal to bow to Hungarian demands have not led to a change of heart in Budapest. The angry rhetoric coming out of the Hungarian capital is now matched by equally disturbing statements from Rome and Berlin. Both nations have expressed support for the Hungarian position, while at the same time announcing their own set of demands. The ambassadors from the three countries have appeared together at the Foreign office to formally hand over a note demanding that the Vojvodina, Slovenia and Dalmatia be transfered to their respective claimants."
+ DOD_hungary.96.desc_HUN_GER:0 "Instead of defusing the situation, our strong response to the latest Turulian demands concerning the Vojvodina have apparently led to a pact between Turul and Kuro. In a recent speech, [GER.GetLeader] called Slovenia "one of the old, unredeemed provinces of the Reich" that should be reclaimed as soon as possible. The Turulian and the Kuro ambassador have both handed over a note to the effect that the Vojvodina and Slovenia are to be transfered to their control at once."
+ DOD_hungary.96.desc_HUN_ITA:0 "Instead of defusing the situation, our strong response to the latest Turulian demands concerning the Vojvodina have apparently led to a pact between Turul and Anzio. In a recent speech, [ITA.GetLeader] referred to Dalmatia as "the unredeemed far shore of the Adriatic". The Turulian and the Anzian ambassador have both handed over a note to the effect that the Vojvodina and Dalmatia are to be transfered to their control at once."
+ DOD_hungary.96.desc_HUN_both:0 "Our refusal to bow to Turulian demands have not led to a change of heart in Budapest. The angry rhetoric coming out of the Turulian capital is now matched by equally disturbing statements from Rome and Berlin. Both nations have expressed support for the Turulian position, while at the same time announcing their own set of demands. The ambassadors from the three countries have appeared together at the Foreign office to formally hand over a note demanding that the Vojvodina, Slovenia and Dalmatia be transfered to their respective claimants."
  DOD_hungary.96.a:0 "We have no choice but to accept."
  DOD_hungary.96.b:0 "We would rather die in battle!"
- DOD_hungary.97.t:0 "Yugoslavia defiant"
+ DOD_hungary.97.t:0 "Brazava defiant"
  DOD_hungary.97.desc:0 "Although they face overwhelming odds, the [YUG.GetAdjective] government have refused to see reason, telling our representatives that if we were to seek a military solution, it would find the [YUG.GetAdjective] military well prepared and ready."
  DOD_hungary.97.a:0 "Then war it is."
- DOD_hungary.100.t:0 "Hungary demands Slovakia"
- DOD_hungary.100.desc:0 "The Hungarian government has approached us about the future status of Slovakia. They strongly believe that they should have full control over the fate of Slovakia, seeing how Slovakia used to be part of Hungary during the days of the Empire.\n\nWhile the Hungarian delegation shied away from issuing any explicit threats, our intelligence service reports an unsetlling amount of activity inside the Hungarian military."
+ DOD_hungary.100.t:0 "Turul demands Slovakia"
+ DOD_hungary.100.desc:0 "The Turulian government has approached us about the future status of Slovakia. They strongly believe that they should have full control over the fate of Slovakia, seeing how Slovakia used to be part of Hungary during the days of the Empire.\n\nWhile the Turulian delegation shied away from issuing any explicit threats, our intelligence service reports an unsetlling amount of activity inside the Hungarian military."
  DOD_hungary.100.a:0 "We have no choice."
  DOD_hungary.100.b:0 "We will not yield an inch."
  DOD_hungary.101.t:0 "Slovakia transfered"
@@ -304,16 +304,16 @@
  DOD_hungary.102.t:0 "[From.GetNameDefCap] refuses to transfer Slovakia"
  DOD_hungary.102.desc:0 "Negotiations about the transfer of Slovakia have stalled almost immediately. The [From.GetAdjective] delegation has stated their position as essentially being the status quo, with no major changes proposed. Our delegation, of course, restated that we consider Slovakia our territory, illegally seized at the end of the Great War.\n\nNo progress has been made, and the increasing frustration on both sides of the table make it unlikely that any will be made."
  DOD_hungary.102.a:0 "Let the issue go."
- DOD_hungary.102.b:0 "Approach Germany about splitting up the country."
- DOD_hungary.103.t:0 "Hungary wants to split [CZE.GetNameDef]"
- DOD_hungary.103.desc:0 "The Hungarian government has approach us with an offer to divide [CZE.GetNameDef]. We would get the western parts of the country, while Hungary would get most of Slovakia, with the demarcation line between our countries roughly bisecting the country. \n\nThey have assured us that as long as they get their share in the end, they are willing to let us make the first move."
+ DOD_hungary.102.b:0 "Approach Kuromormine about splitting up the country."
+ DOD_hungary.103.t:0 "Turul wants to split [CZE.GetNameDef]"
+ DOD_hungary.103.desc:0 "The Turulian government has approach us with an offer to divide [CZE.GetNameDef]. We would get the western parts of the country, while Turul would get most of Slovakia, with the demarcation line between our countries roughly bisecting the country. \n\nThey have assured us that as long as they get their share in the end, they are willing to let us make the first move."
  DOD_hungary.103.a:0 "We will keep their interests in mind."
  DOD_hungary.103.b:0 "They get nothing."
- germany.55.do:0 "Honor the promise to Hungary."
+ germany.55.do:0 "Honor the promise to Turul."
  DOD_hungary.104.t:0 "[GER.GetLeader] agrees"
- DOD_hungary.104.desc:0 "In a secret telegram, the German government has assured us that our interests will be considered when the fate of [CZE.GetNameDef] is decided. When that will be is still unknown."
+ DOD_hungary.104.desc:0 "In a secret telegram, the Kuro government has assured us that our interests will be considered when the fate of [CZE.GetNameDef] is decided. When that will be is still unknown."
  DOD_hungary.104.a:0 "Good."
- DOD_hungary.105.t:0 "Germany refuses to split [CZE.GetName]"
+ DOD_hungary.105.t:0 "Kuromormine refuses to split [CZE.GetName]"
  DOD_hungary.105.desc:0 "\nOn hearing our proposal to split [CZE.GetNameDef], [From.GetLeader] reportedly flew into a rage, calling us "have-beens who have not the slightest clue about the realities of the world." \n\nNeedless to say, our proposal has not been met with acceptance."
  DOD_hungary.105.a:0 "How rude."
  DOD_hungary.105.b:0 "We will take what is ours."
@@ -321,9 +321,9 @@
  DOD_hungary.106.desc:0 "Despite the written promise of [From.GetLeader], the German government has not honored their commitments to us. In the recent negotiations about the fate of [CZE.GetNameDef], we have played no role except as a tool to pressure others into compliance. It appears that [From.GetLeader] never intended to keep his word."
  DOD_hungary.106.a:0 "Protest in the strongest possible terms."
  DOD_hungary.106.b:0 "Mobilize the Army."
- DOD_hungary.107.t:1 "Hungary demands Overlordship"
+ DOD_hungary.107.t:1 "Turul demands Overlordship"
  DOD_hungary.107.desc_SLO_independent:0 "Following several weeks of feverish activity in the Hungarian military, [HUN.GetLeader] has issued a proclamation, declaring that the current situation in Slovakia is a grave concern for Hungary, and demanding certain guarantees from us. \n\nAmongst other things, we would have to consult them before we enter any alliances or sign any treaties and would need to accept a military mission to coordinate our military."
- DOD_hungary.107.desc_SLO_puppet:0 "A Hungarian delegation has arrived to discuss the issue of Slovakia. They consider the country to be in their historic sphere of influence, and are greatly concerned by the influence we have on Slovakian policy.\n\nThe leader of the delegation went so far as to suggest that Slovakian territory may be used as a springboard to launch an invasion of Hungary.\n\nThey suggest that the Hungarian government should be permitted to wield a similar amount of influence on Slovakia as we currently enjoy."
+ DOD_hungary.107.desc_SLO_puppet:0 "A Turulian delegation has arrived to discuss the issue of Slovakia. They consider the country to be in their historic sphere of influence, and are greatly concerned by the influence we have on Slovakian policy.\n\nThe leader of the delegation went so far as to suggest that Slovakian territory may be used as a springboard to launch an invasion of Hungary.\n\nThey suggest that the Hungarian government should be permitted to wield a similar amount of influence on Slovakia as we currently enjoy."
  DOD_hungary.107.a:0 "Very well."
  DOD_hungary.107.b:0 "Out of the question."
  DOD_hungary.108.t:0 "Slovakia is under our control"
